Fix layout to make it work on small screens
No media queries yet to show it differently
on larger screens

--- a/css/styles-960.css
+++ b/css/styles-960.css
@@ -24,7 +24,7 @@
 @media all and (min-width: 1500px) {
   header,
   footer,
-  #map,
+  #map-container,
   #results,
   #maincontent {
     max-width: 1500px;
